fixed spacing of top section; other layout tweaks

--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -29,10 +29,10 @@
   flex-direction: column;
   padding: 10px;
   position: relative;
-  justify-content: center;
+  justify-content: start;
   /* text-shadow:1px 1px 1px lightgray; */
-  padding-top: 100px;
-  min-height: 100vh;
+  padding-top: 80px;
+  min-height: 150vh;
   min-width: 100vw;
   background-image: linear-gradient(225deg, rgba(238,53,32,.65), rgba(246,245,233,.1) 70.71%), linear-gradient(135deg, rgba(53,157,243,1), rgba(246,245,233,1) 70.71%);
   /* background-image: linear-gradient(to bottom, rgba(238, 53, .65), rgba(246, 245, 233, .1) 70.71%); */
@@ -45,8 +45,9 @@
 .Profile-overview {
   display: flex;
   flex-direction: row;
+  /* align-items:flex-end; */
   align-self: center;
-  max-height: 300px;
+  min-height: 300px;
   margin: 20px;
 }
 
@@ -81,8 +82,8 @@
 
 .ProfilePhoto {
   object-fit: cover;
-  max-width: 30vw;
-  max-height: 30vw;
+  width: 300px;
+  height: 350px;
   box-shadow: 4px 4px 8px darkslategray;
 }
 
@@ -92,6 +93,7 @@
   text-shadow:2px 2px 4px whitesmoke;
   width: inherit;
   margin: 10px;
+  justify-content: flex-end;
 }
 
 .top-row {
@@ -111,7 +113,7 @@
   justify-content: start;
   align-items: left;
   text-align: left;
-  max-width: 700px;
+  width: 700px;
   margin: 10px;
 }
 
@@ -119,6 +121,7 @@
   display: flex;
   flex-direction: row;
   align-content:stretch;
+  align-items:baseline;
   justify-content: space-between;
   margin-bottom: 0px;
 }
@@ -139,6 +142,10 @@
   padding: .75em;
   box-shadow: 4px 4px 8px darkslategray;
   text-shadow: 1px 1px 2px darkslategray;
+  --x: calc(var(--px) - 0.5);
+  --y: calc(var(--py) - 0.5);
+  opacity: 1;
+  transform: perspective(1000px);
 }
 
 .Profile-link:hover {
@@ -225,6 +232,7 @@
   text-align: left;
   overflow-y: scroll;
   width: 200px;
+  height: 300px;
 }
 
 .Profile-EventListing {
@@ -248,19 +256,19 @@
   text-align: left;
   align-self: center;
   text-shadow:2px 2px 4px whitesmoke;
-  width: 85vw;
+  width: 1400px;
   height: 40vh;
   overflow-x: hidden;
-  margin: 30px;
+  margin: 10px;
   padding: 5px;
   background-image:linear-gradient(to bottom, #F6EBE9, #EDE08A);
   box-shadow: 4px 4px 8px darkslategray;
 
 }
 
-.Profile-art-set > h3 {
+/* .Profile-art-set > h3 {
   margin-left: ;
-}
+} */
 
 /*
 .ProfileCarousel {
